// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decorators compiler should throw when "api" decorator was not imported from lwc 1`] = `
Object {
  "column": 0,
  "length": 20,
  "line": 3,
  "start": 93,
}
`;

exports[`decorators compiler should throw when "track" decorator was not imported from lwc 1`] = `
Object {
  "column": 0,
  "length": 22,
  "line": 3,
  "start": 93,
}
`;

exports[`decorators compiler should throw when "wire" decorator was not imported from lwc 1`] = `
Object {
  "column": 0,
  "length": 29,
  "line": 4,
  "start": 125,
}
`;

exports[`decorators should throw if an global decorator is used on class field 1`] = `
Object {
  "column": 0,
  "length": 18,
  "line": 2,
  "start": 28,
}
`;

exports[`decorators should throw if an global decorator is used on class methods 1`] = `
Object {
  "column": 0,
  "length": 14,
  "line": 2,
  "start": 28,
}
`;

exports[`decorators throws if a decorator is dereferenced 1`] = `
Object {
  "column": 0,
  "length": 20,
  "line": 2,
  "start": 29,
}
`;

exports[`decorators throws if a decorator is not used on class properties 1`] = `
Object {
  "column": 0,
  "length": -30,
  "line": 2,
  "start": 29,
}
`;

exports[`decorators throws if a decorator is used as a function 1`] = `
Object {
  "column": 0,
  "length": -30,
  "line": 2,
  "start": 29,
}
`;
